# server-watchdog

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: application.rs  client.rs  core.rs  domain.rs  infrastructure.rs  lib.rs  main.rs  watchdog.rs
src/application/: client.rs  config.rs  event.rs  handler.rs  server.rs  worker.rs
src/application/config/: auth.rs  client.rs  event.rs  server.rs
src/application/event/: checker.rs
src/application/handler/: command.rs  general.rs
src/application/handler/command/: alarm.rs
src/application/worker/: runner.rs
src/client/: telegram.rs  telegram_client.rs
src/client/telegram/: dto.rs
src/client/telegram_client/: dto.rs
src/core/: app.rs  cli.rs  command_handler.rs  config.rs  registrar.rs  worker.rs
src/core/cli/: client.rs  common.rs  server.rs
src/core/config/: data.rs
src/core/registrar/: config.rs
src/domain/: chat.rs  config.rs  event.rs  server.rs
src/domain/config/: event.rs
src/domain/server/: health.rs
src/infrastructure/: cli.rs  client.rs  config.rs  handler.rs  server.rs
src/infrastructure/cli/: client.rs  common.rs  password.rs  server.rs  util.rs
src/infrastructure/client/: telegram.rs
src/infrastructure/client/telegram/: dto.rs
src/infrastructure/common/: file_accessor.rs
src/infrastructure/config/: auth.rs  client.rs  common.rs  event.rs  server.rs
src/infrastructure/server/: child_process_stream.rs  http_server_client.rs  std_log_reader.rs  util.rs
src/infrastructure/worker/: runner.rs
src/watchdog/: server.rs
(+1 files in other folders)
