[package]
name = "server-watchdog"
version = "0.0.8"
edition = "2024"
authors = ["Yunseong Jeong <me@yunseong.dev>"]
readme = "README.md"
description = "A server monitoring and remote control tool via messenger."
license = "MIT"
repository = "https://github.com/dev-yunseong/server-watchdog"

[dependencies]
anyhow = "1.0.101"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
log = "0.4.29"
dotenv = "0.15.0"
async-trait = "0.1.89"
home = "0.5.12"
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json", "form"] }
clap = { version = "4.5.57", features = ["derive"] }
regex = "1.12.3"
env_logger = "0.11.8"
derive-new = "0.7.0"
dyn-clone = "1.0.20"
uuid = { version = "1.20.0", features = ["v4"] }
